# agnoteamost

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
src/agnoteamost/: __init__.py  config.py  main.py
src/agnoteamost/agents/: __init__.py  ceo.py  cfo.py  coo.py  cto.py  executive_team.py
src/agnoteamost/interfaces/: __init__.py
src/agnoteamost/interfaces/mattermost/: __init__.py  mattermost.py  router.py  security.py
src/agnoteamost/memory/: __init__.py  mem0_manager.py
src/agnoteamost/tools/: __init__.py  erpnext_tools.py  gitea_tools.py
tests/: __init__.py  test_mattermost_interface.py
